# tapo-cam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_OBJECT_DETECTION.md  build.sh  download_models.sh  rebase_script.txt  remove_credentials.sh  switch_version.sh  test_face_detection.rs  test_tracking  test_tracking.rs
.github/workflows/: ci.yml
src/: camera.rs  main.rs  main_better_detection.rs  main_face_detection_simple.rs  main_improved_detection.rs  main_object_detection.rs  main_object_detection_working.rs  main_simple_detection.rs
