[package]
name = "tapo-cam"
version = "0.1.0"
edition = "2024"

[dependencies]
opencv = { version = "0.93", features = ["videoio", "highgui", "imgproc"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
md-5 = "0.10"
sha2 = "0.10"
